--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <option value="Tic Tac Toe.html">Seite 2</option>
         <option value="Julius.Wirdgesucht.html">Seite 3</option>
 	<option value="Snake Launcher.html">Seite 4</option>
+	<option value="SoundCloud Favorits.html">Seite 5</option>
     </select>
     <br>
     <button onclick="openPage()">Öffnen</button>
